--- a/apps/desktop/src/app/upload/upload.component.scss
+++ b/apps/desktop/src/app/upload/upload.component.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .container {
   display: flex;
   flex-direction: column;
@@ -18,4 +20,16 @@
 }
 .search-form {
   display: flex;
+  width: 100%;
+  border-bottom: 2px solid $gray-dark;
+  justify-content: end;
+}
+table {
+  width: 100%;
+}
+td {
+  border-bottom: 1px solid $gray-dark;
+  &.checkbox {
+    width: rythm(2);
+  }
 }
