--- a/apps/desktop/src/app/upload/upload.component.scss
+++ b/apps/desktop/src/app/upload/upload.component.scss
@@ -22,7 +22,7 @@
   display: flex;
   width: 100%;
   border-bottom: 2px solid $gray-dark;
-  justify-content: end;
+  justify-content: flex-end;
 }
 table {
   width: 100%;
