--- a/apps/app/src/app/activity/activity.component.scss
+++ b/apps/app/src/app/activity/activity.component.scss
@@ -6,19 +6,8 @@
   min-height: 200px;
 }
 
-.activity-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .tabs {
   display: flex;
-}
-
-.subtitle {
-  font-style: italic;
-  padding-left: 25px;
 }
 
 .tab {
@@ -46,4 +35,9 @@
   padding: 32px 44px 32px 32px;
   background-color: #fff;
   @include scrollbar-black(var(--stf-gray-lighter));
+}
+
+.more-results {
+  padding-top: 40px;
+  text-align: center;
 }
