UI to manage multiple NU keys

--- a/apps/app/src/app/account/account-manage/account-manage.component.html
+++ b/apps/app/src/app/account/account-manage/account-manage.component.html
@@ -154,8 +154,8 @@
          #section>
       <div class="section-container">
         <h2>{{ 'account.manage_dbs' | translate }}</h2>
-        <app-account-dbs *ngIf="zones"
-                         [zones]="zones"></app-account-dbs>
+        <app-account-nua *ngIf="zones"
+                         [zones]="zones"></app-account-nua>
       </div>
     </div>
 
