--- a/apps/app/src/app/account/account-nua/account-nua.component.scss
+++ b/apps/app/src/app/account/account-nua/account-nua.component.scss
@@ -1,9 +1,9 @@
 @import 'variables';
 
-.account-dbs {
+.account-nua {
   max-width: 770px;
 
-  .account-db {
+  .client {
     border-bottom: 1px solid rgba(0,0,0,0.3);
     padding-right: 26px;
     &:first-child {
@@ -37,11 +37,7 @@
       min-width: 120px;
     }
 
-    &-count {
-      min-width: 120px;
-    }
-
-    &-action {
+    &-actions {
       min-width: 120px;
     }
 
