improve NUA keys UI

--- a/apps/app/src/app/account/account-nua/account-nua.component.html
+++ b/apps/app/src/app/account/account-nua/account-nua.component.html
@@ -63,7 +63,7 @@
         <stf-button (click)="openDialog(zones)"
                     color="secondary"
                     padding="pd-l">
-          {{ 'account.create_db' | translate }}
+          {{ 'account.create_account' | translate }}
         </stf-button>
       </div>
     </div>
