--- a/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.scss
+++ b/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.scss
@@ -32,6 +32,11 @@
     font-weight: var(--stf-font-weight-semibold);
   }
 
+  .email-info {
+    vertical-align: middle;
+    margin-left: 6px;
+  }
+
   .zone {
     width: 90%;
     &-select {
