--- a/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/app/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="client-dialog">
-  <h1>{{ (editMode ? 'account.edit_db' : 'account.create_db') | translate }}</h1>
+  <h1>{{ (editMode ? 'account.edit_nua_account' : 'account.create_nua_account') | translate }}</h1>
   <button class="close-button"
           (click)="close()">
     <svg-icon src="assets/icons/close.svg"></svg-icon>
@@ -23,11 +23,17 @@
       </div>
     </div>
 
-    <div class="mb-12"
+    <div class="mb-40"
          fxLayout="row">
       <label for="client-email"
-             fxFlex="24%">
-        {{ 'generic.email' | translate }}
+           fxFlex="24%">
+        <span>{{ 'generic.email' | translate }}</span>
+        <svg-icon
+          class="email-info"
+          src="assets/icons/info.svg"
+          stfTooltip
+          stfTooltipText="account.email_info">
+        </svg-icon>
       </label>
       <div fxFlex="70%">
         <stf-input id="client-email"
@@ -39,24 +45,10 @@
       </div>
     </div>
 
-    <div class="mb-40"
-         fxLayout="row">
-      <label for="client-description"
-             fxFlex="24%">
-        {{ 'generic.description' | translate }}
-      </label>
-      <div fxFlex="70%">
-        <stf-textarea id="client-description"
-                      formControlName="description"
-                      initialHeight="100px">
-        </stf-textarea>
-      </div>
-    </div>
-
     <div class="zone"
          *ngIf="data.zones">
       <h2>{{ 'generic.zone' | translate }}</h2>
-      <div class="mb-24">{{ 'account.db_zone_description' | translate }}</div>  
+      <div class="mb-24">{{ 'account.db_zone_description' | translate }}</div>
       <select stfSelect
               formControlName="zone"
               class="zone-select">
