--- a/apps/app/src/app/activity/activity-list.component.html
+++ b/apps/app/src/app/activity/activity-list.component.html
@@ -1,6 +1,6 @@
 <div class="activity-list">
   <div class class="activity-header">
-    <div class="filename">{{ 'activity.file' | translate }}</div>
+    <div class="filename">{{ 'activity.resource' | translate }}</div>
     <div class="date">{{ 'activity.timestamp' | translate }}</div>
     <div class="user">{{ 'activity.actor' | translate }}</div>
   </div>
