fix user name in activity page (#60)
* fix user name in activity page

* fix text

--- a/apps/app/src/app/activity/activity-list.component.html
+++ b/apps/app/src/app/activity/activity-list.component.html
@@ -1,4 +1,9 @@
 <div class="activity-list">
+  <div class class="activity-header">
+    <div class="filename">{{ 'activity.resource' | translate }}</div>
+    <div class="date">{{ 'activity.timestamp' | translate }}</div>
+    <div class="user">{{ 'activity.actor' | translate }}</div>
+  </div>
   <div class="activity-item"
        *ngFor="let item of items">
     <div class="filename">
