Fix literals for NUA keys

--- a/apps/app/src/app/account/account-manage/account-manage.component.html
+++ b/apps/app/src/app/account/account-manage/account-manage.component.html
@@ -133,7 +133,7 @@
          id="knowledgeboxes"
          #section>
       <div class="section-container">
-        <h2>{{ 'account.knowledgeboxs' | translate }}</h2>
+        <h2>{{ 'account.knowledgeboxes' | translate }}</h2>
         <app-account-kbs *ngIf="zones"
                          [zones]="zones"></app-account-kbs>
       </div>
