--- a/apps/app/src/app/account/account-users/account-users.component.html
+++ b/apps/app/src/app/account/account-users/account-users.component.html
@@ -2,7 +2,7 @@
      *ngIf="users">
 
   <div class="mb-28">
-    <div class="users-amount" >
+    <div class="users-amount">
       {{ 'account.users_amount' | translate }} <strong>{{ users.length }}</strong>
     </div>
     <div class="users-left"
@@ -37,7 +37,7 @@
          [dataSource]="users">
 
     <ng-container matColumnDef="user">
-      <th mat-header-cell 
+      <th mat-header-cell
           *matHeaderCellDef>
         {{ 'generic.user' | translate }}
       </th>
@@ -46,44 +46,30 @@
         {{ user.name }}
       </td>
     </ng-container>
-  
-    <!--
-    <ng-container matColumnDef="kb">
-      <th mat-header-cell *matHeaderCellDef class="user-stashes-header">{{ 'account.knowledgeboxs' | translate }}</th>
-      <td mat-cell *matCellDef="let element" class="user-stashes">
-        <stf-button *ngIf="!isItMe(element)" color="legacy" size="small" (click)="manageUser(element)">
-          <span class="user-stashes-counter">{{ usersRoles[element.principal]?.length }}</span>
-        </stf-button>
-        <span *ngIf="isItMe(element)">{{ usersRoles[element.principal]?.length }}</span>
-      </td>
-    </ng-container>
-    -->
-  
+
     <ng-container matColumnDef="role">
       <th class="user-role"
           mat-header-cell
-          *matHeaderCellDef
-          >
+          *matHeaderCellDef>
         {{ 'generic.role' | translate }}
       </th>
       <td class="user-role"
           mat-cell
-          *matCellDef="let user" >
+          *matCellDef="let user">
         <select stfSelect
                 selectSize="small"
                 (ngModelChange)="changeRole(user, $event)"
                 [ngModel]="user.role"
                 [disabled]="isItMe(user.id)">
           <ng-container *ngFor="let role of roles">
-            <option
-              [value]="role[0]">
+            <option [value]="role[0]">
               {{ role[1] | translate }}
             </option>
           </ng-container>
         </select>
       </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="actions">
       <th class="user-actions"
           mat-header-cell
@@ -91,7 +77,7 @@
       <td class="user-actions"
           mat-cell
           *matCellDef="let user">
-        <app-button-action *ngIf="!isItMe(user.id)" 
+        <app-button-action *ngIf="!isItMe(user.id)"
                            (click)="deleteUserConfirm(user)"
                            action="delete"
                            ariaLabel="generic.delete"
@@ -100,7 +86,7 @@
         </app-button-action>
       </td>
     </ng-container>
-  
+
     <tr mat-header-row
         *matHeaderRowDef="columns">
     </tr>
@@ -108,5 +94,5 @@
         *matRowDef="let row; columns: columns">
     </tr>
   </table>
-  
+
 </div>
