Don't allow multiple widgets at the same time

--- a/apps/app/src/app/components/topbar/topbar.component.html
+++ b/apps/app/src/app/components/topbar/topbar.component.html
@@ -12,10 +12,12 @@
   </button>
 
   <div class="search-widget">
-    <span tourAnchor="step2">{{ 'searchbar.help' | translate}}</span>
-    <div tourAnchor="step3"
-         [innerHtml]="searchWidget | async">
-    </div>
+    <ng-container *ngIf="searchEnabled | async">
+      <span tourAnchor="step2">{{ 'searchbar.help' | translate}}</span>
+      <div tourAnchor="step3"
+           [innerHtml]="searchWidget | async">
+      </div>
+    </ng-container>
   </div>
 
   <a class="topbar-report"
