--- a/apps/sistema-demo/src/styles.scss
+++ b/apps/sistema-demo/src/styles.scss
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+$font-path: './libs/sistema/assets/fonts';
+@import '../../../libs/sistema/theme/source-sans-pro';
+@import '../../../libs/sistema/theme/source-code-pro';
+@import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
+@import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/grid';
+
+
+.form-field-config {
+  .state-option {
+    display: flex;
+    margin: rhythm(1) 0;
+  }
+  .option {
+    margin-right: rhythm(2);
+
+    input {
+      margin-right: rhythm(1);
+    }
+  }
+  fieldset {
+    margin: rhythm(3) 0;
+  }
+}
+.component {
+  display: flex;
+  pa-input, pa-select, pa-textarea, ul, form {
+    flex: 1;
+  }
+  li {
+    display: flex;
+    word-break: break-all;
+  }
+}
