--- a/libs/pastanaga/src/lib/inputfield/input.component.scss
+++ b/libs/pastanaga/src/lib/inputfield/input.component.scss
@@ -1,4 +1,4 @@
-
+@import "../styles/partials/variables";
 @mixin form-field-label-floating($font-scale, $transformY) {
   transform: translateY($transformY) scale($font-scale);
 }
@@ -164,14 +164,14 @@ color: rgb(0, 0, 0) !important;
     border-radius: 4px;
   }
   .stf-input-label {
-    color: #707070;
+    color: $gray-contrast;
   }
   .stf-input-control {
     &::placeholder {
-      color: #707070;
+      color: $gray-contrast;
     }
     &::-moz-placeholder {
-      color: #707070;
+      color: $gray-contrast;
     }
   }
   .stf-field-empty {
