--- a/libs/pastanaga/src/lib/inputfield/password-input/password-input.component.scss
+++ b/libs/pastanaga/src/lib/inputfield/password-input/password-input.component.scss
@@ -14,7 +14,7 @@
     }
     .stf-password-input-theme-border {
       svg path {
-        fill: #707070;
+        fill: $gray-contrast;
       }
     }
   }
