--- a/apps/app/src/app/components/topbar/topbar.component.scss
+++ b/apps/app/src/app/components/topbar/topbar.component.scss
@@ -76,7 +76,7 @@
     padding: 0 18px;
     border-radius: var(--stf-border-radius-button);
     font-weight: var(--stf-font-weight-semibold);
-    color: #707070;
+    color: $gray-contrast;
     background-color: #f3f3f3;
     &:hover {
       text-decoration: none;
@@ -106,7 +106,7 @@
     background-color: #f3f3f3;
     border-radius: var(--stf-border-radius-button);
     font-weight: var(--stf-font-weight-semibold);
-    color: #707070;
+    color: $gray-contrast;
     text-align: left;
     span {
       flex: 1 1 0;
@@ -119,7 +119,7 @@
       display: block;
       width: 16px;
       height: auto;
-      fill: #707070;
+      fill: $gray-contrast;
     }
   }
 }
