--- a/libs/pastanaga/src/lib/styles/partials/_variables.scss
+++ b/libs/pastanaga/src/lib/styles/partials/_variables.scss
@@ -10,7 +10,7 @@ $brown-dark: #685454;
 $red-dark: #b60051;
 $green-dark: #21840a;
 $ocher-dark: #a79b06;
-$gray-contrast: #717171;
+$gray-contrast: #707070;
 $blue-contrast: #00719e;
 $brown-contrast: #745f5f;
 $red-contrast: #cc005b;
@@ -123,7 +123,7 @@ $text-selection: rgba($red-light, 0.35) !default;
 $legend-color: darken($green-dark, 12) !default;
 $legend-background: $white-smoke !default;
 $legend-padding: rythm(1) rythm(1.5) !default;
-$legend-margin: 0 (-rythm(1.5)) !default;
+$legend-margin: 0 (- rythm(1.5)) !default;
 $control-border-color: $blue-light !default;
 
 // Shadows
@@ -354,15 +354,15 @@ $h-dialog: rythm(1) * 55; //660
 // RADIUS
 $radius-base: 3px !default;
 $border-radius: (
-  xs: calc($radius-base * (1 / 3)),
+  xs: calc(#{$radius-base} * (1 / 3)),
   // ~1px
-  s: calc($radius-base * (2 / 3)),
+  s: calc(#{$radius-base} * (2 / 3)),
   // ~2px
-  m: $radius-base,
+  m: #{$radius-base},
   //  3px
-  l: calc($radius-base * (2 / 1)),
+  l: calc(#{$radius-base} * (2 / 1)),
   // ~6px
-  xl: calc($radius-base * (4 / 1)) // ~12px,,
+  xl: calc(#{$radius-base} * (4 / 1)) // ~12px,,
 ) !default;
 @function border-radius($br) {
   @return map-get($border-radius, $br);
