account sidebar entries

--- a/apps/app/src/app/components/stash-navbar/stash-navbar.component.scss
+++ b/apps/app/src/app/components/stash-navbar/stash-navbar.component.scss
@@ -121,3 +121,8 @@ $height-breakpoint: 730px;
 .group-items.touranchor--is-active {
   border: 1px solid var(--stf-primary);
 }
+
+.dark {
+  background-color: $gray-black;
+  color: $white;
+}
