--- a/apps/app/src/app/components/stash-navbar/stash-navbar.component.html
+++ b/apps/app/src/app/components/stash-navbar/stash-navbar.component.html
@@ -1,7 +1,8 @@
 <div class="stash-navbar"
      [class.is-unfolded]="isUnfolded">
   <div class="navbar-scroll-container">
-    <div class="navbar-content">
+    <div *ngIf="!inAccount"
+         class="navbar-content">
       <div class="nav-group">
         <div *ngIf="isAdminOrContrib | async"
              class="group-items"
@@ -41,14 +42,14 @@
               <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
             </a>
             <a *ngIf="isOntologiesEnabled | async"
-              [routerLink]="kbUrl + '/ontologies'"
-              class="nav-link">
+               [routerLink]="kbUrl + '/ontologies'"
+               class="nav-link">
               <svg-icon src="assets/icons/ontologies.svg"></svg-icon>
               <span class="nav-link-title">{{ 'resource.classification' | translate }}</span>
             </a>
             <a *ngIf="isEntitiesEnabled | async"
-              [routerLink]="[kbUrl + '/entities']"
-              class="nav-link">
+               [routerLink]="[kbUrl + '/entities']"
+               class="nav-link">
               <svg-icon src="assets/icons/entity-list.svg"></svg-icon>
               <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
             </a>
@@ -56,7 +57,8 @@
         </div>
       </div>
 
-      <div class="nav-group" *ngIf="isAdminOrContrib | async">
+      <div class="nav-group"
+           *ngIf="isAdminOrContrib | async">
         <div class="group-items"
              tourAnchor="step7">
           <a [routerLink]="kbUrl + '/manage'"
@@ -69,14 +71,14 @@
              class="group-items"
              tourAnchor="step8">
           <a [routerLink]="kbUrl + '/widgets'"
-              class="nav-link">
+             class="nav-link">
             <svg-icon src="assets/icons/widget.svg"></svg-icon>
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
         </div>
-        <div  *ngIf="isUsersEnabled | async"
-              class="group-items"
-              tourAnchor="step9">
+        <div *ngIf="isUsersEnabled | async"
+             class="group-items"
+             tourAnchor="step9">
           <a [routerLink]="kbUrl + '/users'"
              class="nav-link">
             <svg-icon src="assets/icons/manage-users.svg"></svg-icon>
@@ -95,36 +97,49 @@
           </div>
         </ng-container>
       </div>
-    </div>
-
-    <div class="navbar-footer">
-      <div class="nav-group">
-        <!--
+      <div class="nav-group dark"
+           *ngIf="isAccountManager | async">
         <div class="group-items">
-          <a (click)="toggleQuickStart()" class="nav-link quick-start" tourAnchor="step11">
-            <svg-icon src="assets/icons/progress.svg"></svg-icon>
-            <div class="nav-link-title">
-              <div class="quick-start-title">{{ 'quickstart.title' | translate }}</div>
-              <div class="quick-start-tasks">{{ 'quickstart.remaining_tasks' | translate : { num: 4 } }}</div>
-            </div>
-          </a>
-          <a class="nav-link">
-            <svg-icon src="assets/icons/help.svg"></svg-icon>
-            <span class="nav-link-title">{{ 'generic.help' | translate }}</span>
-          </a>
-          <a class="nav-link">
-            <svg-icon src="assets/icons/suggestions.svg"></svg-icon>
-            <span class="nav-link-title">{{ 'generic.suggestions' | translate }}</span>
+          <a [routerLink]="(accountUrl | async) + '/home'"
+             class="nav-link">
+            <svg-icon src="assets/icons/account.svg"></svg-icon>
+            <span class="nav-link-title">{{ 'account.manage' | translate }}</span>
           </a>
         </div>
-        -->
       </div>
     </div>
-
-  </div>
-  <div class="quick-start-container"
-       *ngIf="isUnfolded && showQuickStart"
-       @fadeInOut>
-    <app-quick-start></app-quick-start>
+    <div *ngIf="inAccount && (isAccountManager | async)"
+         class="navbar-content dark">
+      <div class="nav-group">
+        <div class="group-items">
+          <a [routerLink]="(accountUrl | async) + '/settings'"
+             class="nav-link">
+            <svg-icon src="assets/icons/preferences-white.svg"></svg-icon>
+            <span class="nav-link-title">{{ 'account.settings' | translate }}</span>
+          </a>
+        </div>
+        <div class="group-items">
+          <a [routerLink]="(accountUrl | async) + '/kbs'"
+             class="nav-link">
+            <svg-icon src="assets/icons/kb.svg"></svg-icon>
+            <span class="nav-link-title">{{ 'account.knowledgeboxes' | translate }}</span>
+          </a>
+        </div>
+        <div class="group-items">
+          <a [routerLink]="(accountUrl | async) + '/users'"
+             class="nav-link">
+            <svg-icon src="assets/icons/user-white.svg"></svg-icon>
+            <span class="nav-link-title">{{ 'account.users' | translate }}</span>
+          </a>
+        </div>
+        <div class="group-items">
+          <a [routerLink]="(accountUrl | async) + '/nua'"
+             class="nav-link">
+            <svg-icon src="assets/icons/key.svg"></svg-icon>
+            <span class="nav-link-title">{{ 'account.nua_keys' | translate }}</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
