NUA activity under feature flag

--- a/apps/app/src/app/account/account-nua/account-nua.component.html
+++ b/apps/app/src/app/account/account-nua/account-nua.component.html
@@ -31,7 +31,8 @@
                              stfTooltip
                              stfTooltipText="account.generate_key">
           </app-button-action>
-          <app-button-action (click)="goToActivity(client)"
+          <app-button-action *ngIf="isNuaActivityEnabled | async"
+                             (click)="goToActivity(client)"
                              action="activity"
                              ariaLabel="account.nua_key_activity"
                              stfTooltip
