set proper routes

--- a/apps/app/src/app/account/account-kbs/account-kbs.component.html
+++ b/apps/app/src/app/account/account-kbs/account-kbs.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="account-kbs"
      *ngIf="zones && account && knowledgeBoxes">
-  <div class="account-kbs-description">{{ 'account.related_kbs' | translate }}</div>
+  <h2>{{ 'account.related_kbs' | translate }}</h2>
 
   <div class="account-kbs-list">
     <div class="account-kb"
