--- a/apps/app/src/app/account/account-users/account-users.component.html
+++ b/apps/app/src/app/account/account-users/account-users.component.html
@@ -1,5 +1,6 @@
 <div class="account-users"
      *ngIf="users">
+  <h2>{{ 'account.users' | translate }}</h2>
 
   <div class="mb-28">
     <div class="users-amount">
