--- a/apps/app/src/app/account/account.component.html
+++ b/apps/app/src/app/account/account.component.html
@@ -14,5 +14,7 @@
 </stf-sidebar>
 
 <div class="container">
-  <router-outlet></router-outlet>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
 </div>
