--- a/apps/app/src/app/account/account-users/account-users.component.scss
+++ b/apps/app/src/app/account/account-users/account-users.component.scss
@@ -1,6 +1,11 @@
 @import 'variables';
 
 .account-users {
+  padding: 70px var(--app-layout-margin-right) 60px 5%;
+  h2 {
+    margin: 0 0 36px 0;
+    font-weight: var(--stf-font-weight-bold);
+  }
   .users-left,
   .users-amount {
     strong {
