--- a/apps/app/src/app/account/account.component.html
+++ b/apps/app/src/app/account/account.component.html
@@ -8,8 +8,7 @@
              zIndexBackdrop="850">
   <ng-template #sidebarContent
                let-unfolded="unfolded">
-    <app-stash-navbar [isUnfolded]="unfolded"
-                      [inAccount]="true"></app-stash-navbar>
+    <app-stash-navbar [isUnfolded]="unfolded"></app-stash-navbar>
   </ng-template>
 </stf-sidebar>
 
