--- a/apps/app/src/app/account/account-kbs/account-kbs.component.scss
+++ b/apps/app/src/app/account/account-kbs/account-kbs.component.scss
@@ -2,6 +2,11 @@
 
 .account-kbs {
   max-width: 770px;
+  padding: 70px var(--app-layout-margin-right) 60px 5%;
+  h2 {
+    margin: 0 0 36px 0;
+    font-weight: var(--stf-font-weight-bold);
+  }
 
   &-list {
     app-button-action {
