--- a/apps/app/src/app/account/account-manage/account-manage.component.scss
+++ b/apps/app/src/app/account/account-manage/account-manage.component.scss
@@ -1,3 +1,10 @@
+.container {
+  padding: 70px var(--app-layout-margin-right) 60px 5%;
+}
+h2 {
+  margin: 0 0 36px 0;
+  font-weight: var(--stf-font-weight-bold);
+}
 .account-manage-container {
   display: block;
   margin: 30px 0 80px 0;
@@ -6,6 +13,9 @@
 .section {
   padding: 50px 0 55px 0;
   border-bottom: 1px solid var(--stf-gray-lighter-2);
+  &:first-child {
+    padding-top: 0;
+  }
   &:last-child {
     border-bottom: 0;
   }
@@ -13,11 +23,6 @@
     width: 825px;
     max-width: 100%;
   }
-}
-
-h2 {
-  margin: 0 0 36px 0;
-  font-weight: var(--stf-font-weight-bold);
 }
 
 .account-field {
